# job_module/controllers/default_controller.py
@@ -1,0 +1,16 @@
+import connexion
+import six
+
+from job_module.models.health import Health  # noqa: E501
+from job_module import util
+
+
+def health_get():  # noqa: E501
+    """health_get
+
+    Check health of service. # noqa: E501
+
+
+    :rtype: Health
+    """
+    return 'Job Service Component is up!'
